# docs/swagger/terminal/api/v1/api.swagger.json
@@ -10,14 +10,14 @@
   ],
   "swagger": "2.0",
   "info": {
-    "description": "Goldex Robot terminal serves JSONRPC 2 API and accepts Websocket connections on localhost\\:80\\/ws. Websocket messages are textual, not binary.\n\nHow to read the document.\nThis doc is generated according to OpenAPI 2, so JSONRPC methods are defined as POST methods. Actual method name is defined after slash symbol.\nFor example\\:\n\n`\"POST /inlet.open\"`\n\nmeans JSONRPC request\n\n`{\"jsonrpc\":\"2.0\",\"id\":1,\"method\":\"inlet.open\",\"params\":{...}}`",
+    "description": "Goldex Robot terminal exposes [JSONRPC 2](https://www.jsonrpc.org/specification) API over [Websocket](https://en.wikipedia.org/wiki/WebSocket) connection on localhost\\:80\\/ws. Websocket messages are textual, not binary.\nThe API exposes __methods__ to call by a client, defined as `POST` in this doc ([request](https://www.jsonrpc.org/specification#request_object) in terms of JSONRPC).\nThe API sends __events__, defined as `GET` in this doc ([notification](https://www.jsonrpc.org/specification#notification) in terms of JSONRPC).\n\nActual method/event name is defined in this document after slash `/` symbol. For example\\:\n\n`\"POST /inlet.open\"`\n\nmeans JSONRPC request to the method `inlet.open`:\n\n`{\"jsonrpc\":\"2.0\",\"id\":1,\"method\":\"inlet.open\",\"params\":{...}}`\n\nDefault flow for an item evaluation (for buyout/pawnshop flow):\n1. Check `status` to ensure the terminal is online and required optional hardware is available.\n2. Begin a new evaluation with `eval.new`.\n3. Open the inlet window `inlet.open` and notify the customer.\n4. Accept an item and close the inlet window with `inlet.close`.\n5. Begin a spectral evaluation with `eval.spectrum`. In case of rejection of the item or an explicit cancellation by the customer perform `eval.return` and then `outlet.close`.\n6. Begin a hydrostatic evaluation with `eval.hydro`. In case of rejection of the item or an explicit cancellation by the customer perform `eval.return` and then `outlet.close`.\n7. Perform the customer identification, payment processing and whatever is needed by your business flow. In case of critical failure or an explicit cancellation by the customer perform `eval.return` and then `outlet.close`.\n8. Move the evaluated and accepted item to the storage with `eval.store`.",
     "title": "Terminal JSONRPC API.",
     "version": "1.0.0"
   },
   "host": "localhost:80",
   "basePath": "/ws",
   "paths": {
-    "/call": {
+    "/backend": {
       "post": {
         "description": "Performs a call to a named backend method defined in Goldex dashboard.",
         "consumes": [
@@ -29,14 +29,14 @@
         "tags": [
           "Other"
         ],
-        "summary": "Call named backend method.",
-        "operationId": "Call",
+        "summary": "Call to a named backend method.",
+        "operationId": "Backend",
         "parameters": [
           {
             "description": "JSONRPC params",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/CallRequest"
+              "$ref": "#/definitions/BackendRequest"
             }
           }
         ],
@@ -47,7 +47,34 @@
           "x-jsonrpc-success": {
             "description": "Result",
             "schema": {
-              "$ref": "#/definitions/CallResult"
+              "$ref": "#/definitions/BackendResult"
+            }
+          }
+        }
+      }
+    },
+    "/camera.frontal": {
+      "post": {
+        "description": "Requires the terminal to take a photo from frontal camera and upload it to Goldex backend. Photo could be accessed via Goldex API by returned file ID.",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "Other"
+        ],
+        "summary": "Take a photo from frontal camera.",
+        "operationId": "CameraFrontal",
+        "responses": {
+          "default": {
+            "description": "JSONRPC error"
+          },
+          "x-jsonrpc-success": {
+            "description": "Result",
+            "schema": {
+              "$ref": "#/definitions/CameraResult"
             }
           }
         }
@@ -195,6 +222,23 @@
       }
     },
     "/hardware": {
+      "get": {
+        "description": "An event may be generated by optional hardware installed within the terminal. Depends on implementation.",
+        "tags": [
+          "Events"
+        ],
+        "summary": "Event from optional hardware.",
+        "operationId": "EventHardware",
+        "parameters": [
+          {
+            "description": "JSONRPC params",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/HardwareEvent"
+            }
+          }
+        ]
+      },
       "post": {
         "description": "Call an RPC method of the optional hardware installed within the terminal.",
         "consumes": [
@@ -206,7 +250,7 @@
         "tags": [
           "Other"
         ],
-        "summary": "Call to hardware.",
+        "summary": "Call to optional hardware.",
         "operationId": "Hardware",
         "parameters": [
           {
@@ -367,7 +411,7 @@
     }
   },
   "definitions": {
-    "CallRequest": {
+    "BackendRequest": {
       "type": "object",
       "properties": {
         "body": {
@@ -386,7 +430,7 @@
           }
         },
         "method": {
-          "description": "method name",
+          "description": "predefined method name",
           "type": "string",
           "x-go-name": "Method",
           "example": "my-method"
@@ -394,7 +438,7 @@
       },
       "x-go-package": "github.com/goldexrobot/core.integration/terminal/api/v1"
     },
-    "CallResult": {
+    "BackendResult": {
       "type": "object",
       "properties": {
         "body": {
@@ -418,6 +462,18 @@
           "format": "int64",
           "x-go-name": "HttpStatus",
           "example": 200
+        }
+      },
+      "x-go-package": "github.com/goldexrobot/core.integration/terminal/api/v1"
+    },
+    "CameraResult": {
+      "type": "object",
+      "properties": {
+        "file_id": {
+          "description": "uploaded file ID",
+          "type": "string",
+          "x-go-name": "FileID",
+          "example": "5aca2ad7044e4c00aa30d85f0a723eb8"
         }
       },
       "x-go-package": "github.com/goldexrobot/core.integration/terminal/api/v1"
@@ -685,6 +741,39 @@
           "type": "string",
           "x-go-name": "Transaction",
           "example": "6c8ec8b3e88b4fcaac47f781f5e6343e"
+        }
+      },
+      "x-go-package": "github.com/goldexrobot/core.integration/terminal/api/v1"
+    },
+    "HardwareEvent": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "description": "event data key-value",
+          "type": "object",
+          "additionalProperties": {
+            "type": "object"
+          },
+          "x-go-name": "Data",
+          "example": {
+            "bar": [
+              "baz",
+              "qux"
+            ],
+            "foo": "bar"
+          }
+        },
+        "event": {
+          "description": "event name",
+          "type": "string",
+          "x-go-name": "Event",
+          "example": "my-event"
+        },
+        "name": {
+          "description": "named hardware",
+          "type": "string",
+          "x-go-name": "Name",
+          "example": "my-pos"
         }
       },
       "x-go-package": "github.com/goldexrobot/core.integration/terminal/api/v1"
