# terminal/api/v1/api.go
@@ -1,16 +1,26 @@
 // Terminal JSONRPC API.
 //
-// Goldex Robot terminal serves JSONRPC 2 API and accepts Websocket connections on localhost\:80\/ws. Websocket messages are textual, not binary.
+// Goldex Robot terminal exposes [JSONRPC 2](https://www.jsonrpc.org/specification) API over [Websocket](https://en.wikipedia.org/wiki/WebSocket) connection on localhost\:80\/ws. Websocket messages are textual, not binary.
+// The API exposes __methods__ to call by a client, defined as `POST` in this doc ([request](https://www.jsonrpc.org/specification#request_object) in terms of JSONRPC).
+// The API sends __events__, defined as `GET` in this doc ([notification](https://www.jsonrpc.org/specification#notification) in terms of JSONRPC).
 //
-// How to read the document.
-// This doc is generated according to OpenAPI 2, so JSONRPC methods are defined as POST methods. Actual method name is defined after slash symbol.
-// For example\:
+// Actual method/event name is defined in this document after slash `/` symbol. For example\:
 //
 // `"POST /inlet.open"`
 //
-// means JSONRPC request
+// means JSONRPC request to the method `inlet.open`:
 //
 // `{"jsonrpc":"2.0","id":1,"method":"inlet.open","params":{...}}`
+//
+// Default flow for an item evaluation (for buyout/pawnshop flow):
+// 1. Check `status` to ensure the terminal is online and required optional hardware is available.
+// 2. Begin a new evaluation with `eval.new`.
+// 3. Open the inlet window `inlet.open` and notify the customer.
+// 4. Accept an item and close the inlet window with `inlet.close`.
+// 5. Begin a spectral evaluation with `eval.spectrum`. In case of rejection of the item or an explicit cancellation by the customer perform `eval.return` and then `outlet.close`.
+// 6. Begin a hydrostatic evaluation with `eval.hydro`. In case of rejection of the item or an explicit cancellation by the customer perform `eval.return` and then `outlet.close`.
+// 7. Perform the customer identification, payment processing and whatever is needed by your business flow. In case of critical failure or an explicit cancellation by the customer perform `eval.return` and then `outlet.close`.
+// 8. Move the evaluated and accepted item to the storage with `eval.store`.
 //
 //     Schemes: ws
 //     Host: localhost:80
@@ -254,9 +264,9 @@ type API interface {
 	//     description: JSONRPC error
 	Status() (res StatusResult, err error)
 
-	// swagger:operation POST /call Call
+	// swagger:operation POST /backend Backend
 	//
-	// Call named backend method.
+	// Call to a named backend method.
 	//
 	// Performs a call to a named backend method defined in Goldex dashboard.
 	// ---
@@ -270,19 +280,19 @@ type API interface {
 	//   - in: body
 	//     description: JSONRPC params
 	//     schema:
-	//       $ref: "#/definitions/CallRequest"
+	//       $ref: "#/definitions/BackendRequest"
 	// responses:
 	//   x-jsonrpc-success:
 	//     description: Result
 	//     schema:
-	//       $ref: "#/definitions/CallResult"
+	//       $ref: "#/definitions/BackendResult"
 	//   default:
 	//     description: JSONRPC error
-	Call(req CallRequest) (res CallResult, err error)
+	Backend(req BackendRequest) (res BackendResult, err error)
 
 	// swagger:operation POST /hardware Hardware
 	//
-	// Call to hardware.
+	// Call to optional hardware.
 	//
 	// Call an RPC method of the optional hardware installed within the terminal.
 	// ---
@@ -305,6 +315,44 @@ type API interface {
 	//   default:
 	//     description: JSONRPC error
 	Hardware(req HardwareRequest) (res HardwareResult, err error)
+
+	// swagger:operation POST /camera.frontal CameraFrontal
+	//
+	// Take a photo from frontal camera.
+	//
+	// Requires the terminal to take a photo from frontal camera and upload it to Goldex backend. Photo could be accessed via Goldex API by returned file ID.
+	// ---
+	// consumes:
+	// - application/json
+	// produces:
+	// - application/json
+	// tags:
+	//   - Other
+	// responses:
+	//   x-jsonrpc-success:
+	//     description: Result
+	//     schema:
+	//       $ref: "#/definitions/CameraResult"
+	//   default:
+	//     description: JSONRPC error
+	CameraFrontal() (res CameraResult, err error)
+
+	////// EVENTS //////
+
+	// swagger:operation GET /hardware EventHardware
+	//
+	// Event from optional hardware.
+	//
+	// An event may be generated by optional hardware installed within the terminal. Depends on implementation.
+	//
+	// ---
+	// parameters:
+	//   - in: body
+	//     description: JSONRPC params
+	//     schema:
+	//       $ref: "#/definitions/HardwareEvent"
+	// tags:
+	//   - Events
 }
 
 // swagger:model
@@ -525,8 +573,8 @@ type StatusResult struct {
 }
 
 // swagger:model
-type CallRequest struct {
-	// method name
+type BackendRequest struct {
+	// predefined method name
 	//
 	// example: my-method
 	Method string `json:"method" validate:"required,max=128"`
@@ -538,7 +586,7 @@ type CallRequest struct {
 }
 
 // swagger:model
-type CallResult struct {
+type BackendResult struct {
 	// http status
 	//
 	// example: 200
@@ -579,4 +627,30 @@ type HardwareResult struct {
 	//
 	// example: optional failure description
 	Error string `json:"error,omitempty"`
+}
+
+// swagger:model
+type CameraResult struct {
+	// uploaded file ID
+	//
+	// example: 5aca2ad7044e4c00aa30d85f0a723eb8
+	FileID string `json:"file_id"`
+}
+
+// swagger:model
+type HardwareEvent struct {
+	// named hardware
+	//
+	// example: my-pos
+	Name string `json:"name"`
+
+	// event name
+	//
+	// example: my-event
+	Event string `json:"event"`
+
+	// event data key-value
+	//
+	// example: {"foo":"bar","bar":["baz","qux"]}
+	Data map[string]interface{} `json:"data"`
 }
